- update angular to next version (improved ng serve/build times) - continue working on the datepicker

--- a/src/app/shared/components/datepicker/calendar-days/calendar-days.component.html
+++ b/src/app/shared/components/datepicker/calendar-days/calendar-days.component.html
@@ -2,12 +2,16 @@
   {{ dayName }}
 </div>
 <button
-  *ngFor="let day of days; trackBy: trackByDay"
+  *ngFor="let day of days; trackBy: trackByDay; let $index = index"
   bioButton
-  icon
+  fab
   type="button"
   class="day"
   [disabled]="day.disabled"
+  [class.weekend]="day.weekend"
+  [class.today]="day.date | dateEqual: nowDate"
+  [class.selected]="day.date | dateEqual: value"
+  (click)="onClick(day, $index)"
 >
   {{ day.day }}
 </button>
