--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,9 @@
 </header>
 
 <main>
-  <bio-calendar></bio-calendar>
+  <bio-calendar [(value)]="date"></bio-calendar>
+  <hr />
+  {{ date | date }}
   <!--<router-outlet></router-outlet>-->
 </main>
 
