--- a/src/app/shared/components/datepicker/calendar-days/calendar-days.component.scss
+++ b/src/app/shared/components/datepicker/calendar-days/calendar-days.component.scss
@@ -1,3 +1,5 @@
+@use 'variables' as v;
+
 $size: 2rem;
 
 :host {
@@ -17,4 +19,14 @@ $size: 2rem;
 .day-name {
   display: grid;
   place-items: center;
+}
+
+.day {
+  &.today {
+    border: 1px solid transparentize(v.$primary, 0.3);
+    box-shadow: 0 0 1px transparent;
+  }
+  &.selected {
+    background-color: v.$accent-300;
+  }
 }
