- added more keyboard navigation - removed utils and added calendar-adapter

--- a/src/app/shared/components/datepicker/calendar/calendar.component.html
+++ b/src/app/shared/components/datepicker/calendar/calendar.component.html
@@ -22,6 +22,8 @@
         (valueChange)="valueChange.emit($event)"
         (nextMonth)="next()"
         (previousMonth)="previous()"
+        (nextYear)="next(calendarViewModeEnum.month)"
+        (previousYear)="previous(calendarViewModeEnum.month)"
       ></bio-calendar-days>
     </ng-container>
   </ng-container>
