--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 </header>
 
 <main>
-  <bio-calendar [(value)]="date"></bio-calendar>
+  <bio-calendar [(value)]="date" locale="pt-BR"></bio-calendar>
   <hr />
   {{ date | date }}
   <!--<router-outlet></router-outlet>-->
