--- a/src/app/shared/components/datepicker/calendar/calendar.component.scss
+++ b/src/app/shared/components/datepicker/calendar/calendar.component.scss
@@ -7,11 +7,13 @@
   border-radius: v.$radius;
   background-color: v.$primary-50;
   color: v.$primary-600;
+
+  @include m.elevation(2);
+
   &.light {
     background-color: v.$primary-600;
     color: v.$primary-50;
   }
-  @include m.elevation(1);
 }
 
 .header {
@@ -19,4 +21,17 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1rem;
+}
+
+.body {
+  $size: calc((2rem * 7) + (0.5rem * 6));
+
+  min-width: $size;
+  min-height: $size;
+  width: $size;
+  height: $size;
+}
+
+.month-button {
+  text-transform: capitalize;
 }
