- fixed viewMode not switching correctly in the calendar - added custom classes to the month calendar, indicating the current month and the selected - started doing the keyboard navigation the month view

--- a/src/app/shared/components/datepicker/calendar-months/calendar-months.component.html
+++ b/src/app/shared/components/datepicker/calendar-months/calendar-months.component.html
@@ -1,3 +1,11 @@
-<button bioButton icon type="button" *ngFor="let month of months; trackBy: trackByString">
-  {{ month }}
+<button
+  bioButton
+  icon
+  type="button"
+  *ngFor="let month of months; trackBy: trackBy"
+  [class.same-month]="month.month === todayMonth"
+  [class.selected]="month.date | dateEqual: value:'month'"
+  (click)="monthSelect.emit(month.month)"
+>
+  {{ month.name }}
 </button>
