- added abstract class to handle calendar keyboard navigation - finished calendar months

--- a/src/app/shared/components/datepicker/calendar/calendar.component.html
+++ b/src/app/shared/components/datepicker/calendar/calendar.component.html
@@ -47,6 +47,8 @@
         [months]="months"
         [value]="value"
         (monthSelect)="onMonthSelect($event)"
+        (nextYear)="next(viewModeMonth)"
+        (previousYear)="previous(viewModeMonth)"
       ></bio-calendar-months>
     </ng-container>
     <ng-container *ngSwitchCase="viewModeYear"> YEAR </ng-container>
