- added calendar years component

--- a/src/app/shared/components/datepicker/calendar-months/calendar-months.component.html
+++ b/src/app/shared/components/datepicker/calendar-months/calendar-months.component.html
@@ -1,6 +1,6 @@
 <button
   bioButton
-  icon
+  fab
   type="button"
   *ngFor="let month of months; trackBy: trackBy"
   [class.same-month]="month.month === todayMonth"
