--- a/src/app/shared/components/datepicker/calendar-months/calendar-months.component.scss
+++ b/src/app/shared/components/datepicker/calendar-months/calendar-months.component.scss
@@ -3,7 +3,7 @@
 $width: 8rem;
 $height: 2rem;
 
-.button.button-icon {
+.button.fab {
   min-height: $height;
   height: $height;
   min-width: $width;
