- added @typescript-eslint/prefer-readonly rule - finished the calendar years

--- a/src/app/shared/components/datepicker/calendar-months/calendar-months.component.html
+++ b/src/app/shared/components/datepicker/calendar-months/calendar-months.component.html
@@ -4,7 +4,7 @@
   type="button"
   *ngFor="let month of months; trackBy: trackBy"
   [class.same-month]="month.month === todayMonth"
-  [class.selected]="month.date | dateEqual: value:'month'"
+  [class.selected]="month.month === valueMonth"
   (click)="monthSelect.emit(month.month)"
 >
   {{ month.name }}
