--- a/src/app/shared/components/datepicker/calendar-days/calendar-days.component.html
+++ b/src/app/shared/components/datepicker/calendar-days/calendar-days.component.html
@@ -7,7 +7,7 @@
   fab
   type="button"
   class="day"
-  [disabled]="day.disabled"
+  [disabled]="day.disabled || disabled"
   [class.weekend]="day.weekend"
   [class.today]="day.date | dateEqual: nowDate"
   [class.selected]="day.date | dateEqual: value"
