--- a/src/app/shared/components/datepicker/calendar-months/calendar-months.component.html
+++ b/src/app/shared/components/datepicker/calendar-months/calendar-months.component.html
@@ -5,6 +5,7 @@
   *ngFor="let month of months; trackBy: trackBy"
   [class.same-month]="month.month === todayMonth"
   [class.selected]="month.month === valueMonth"
+  [disabled]="disabled"
   (click)="monthSelect.emit(month.month)"
 >
   {{ month.name }}
