--- a/src/app/shared/components/datepicker/calendar/calendar.component.html
+++ b/src/app/shared/components/datepicker/calendar/calendar.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="viewMode$ | async as viewMode">
-  <div class="header">
+  <div class="bio-calendar-header">
     <div>
       <button
         [disabled]="disabled || viewMode === viewModeDay"
@@ -10,7 +10,7 @@
         {{ day$ | async }}
       </button>
       <button
-        class="month-button"
+        class="bio-calendar-month-button"
         [disabled]="disabled || viewMode === viewModeMonth"
         bioButton
         type="button"
@@ -27,7 +27,7 @@
         {{ year$ | async }}
       </button>
     </div>
-    <div class="actions">
+    <div class="bio-calendar-actions">
       <button bioButton icon type="button" (click)="previous()" [disabled]="disabled">
         <icon>keyboard_arrow_left</icon>
       </button>
@@ -36,13 +36,13 @@
       </button>
     </div>
   </div>
-  <div class="body" [ngSwitch]="viewMode">
+  <div class="bio-calendar-body" [ngSwitch]="viewMode">
     <ng-container *ngSwitchCase="viewModeDay">
       <ng-container *ngIf="{ days: days$ | async, dayNames: dayNames$ | async } as dayState">
         <bio-calendar-days
           [days]="dayState.days ?? []"
           [dayNames]="dayState.dayNames ?? []"
-          [(value)]="value"
+          [value]="value"
           [disabled]="disabled"
           (valueChange)="onDaySelect($event)"
           (nextMonth)="next()"
@@ -75,5 +75,7 @@
       ></bio-calendar-years>
     </ng-container>
   </div>
-  <div class="footer"></div>
+  <div class="bio-calendar-footer" *ngIf="calendarFooterDirective">
+    <ng-content select="[bioCalendarFooter],bio-calendar-footer"></ng-content>
+  </div>
 </ng-container>
