--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,14 +4,17 @@
 </header>
 
 <main>
-  <bio-calendar [(model)]="date">
-    <bio-calendar-footer>
-      <button bioButton bioCalendarFooterToday>Today</button>
-      <button bioButton bioCalendarFooterClear>Clear</button>
-    </bio-calendar-footer>
-  </bio-calendar>
+  <form-field style="max-width: 240px">
+    <input [(model)]="date" bioInput [bioDatepicker]="datepicker" />
+    <button bioButton icon suffix type="button" [bioDatepickerTrigger]="datepicker">
+      <icon>calendar_today</icon>
+    </button>
+    <bio-datepicker #datepicker></bio-datepicker>
+  </form-field>
   <hr />
   {{ date | date }}
+  <hr />
+  <button id="b" type="button" (click)="date = null">Teste</button>
   <!--<router-outlet></router-outlet>-->
 </main>
 
