- create a _calendar.scss to have some variables about colors

--- a/src/app/shared/components/datepicker/calendar-years/calendar-years.component.scss
+++ b/src/app/shared/components/datepicker/calendar-years/calendar-years.component.scss
@@ -1,27 +1,23 @@
 @use 'variables' as v;
+@use '../calendar' as c;
 
-$size: 2rem;
-$width: 4rem;
+$width: c.$base-size * 2;
 
 :host {
   display: grid;
   grid-template-columns: repeat(4, minmax(0, $width));
   grid-gap: 0.5rem;
-  padding-top: $size;
+  padding-top: c.$base-size;
 }
 
 .button.fab {
-  min-height: $size;
-  height: $size;
-  min-width: $width;
-  width: $width;
-  border-radius: $size;
+  @include c.size($width);
 
   &.same-year {
-    border: 1px solid transparentize(v.$primary, 0.3);
+    @include c.same-date-border();
   }
 
   &.selected {
-    background-color: v.$accent-300;
+    @include c.selected-color();
   }
 }
