--- a/src/app/shared/components/datepicker/calendar-days/calendar-days.component.scss
+++ b/src/app/shared/components/datepicker/calendar-days/calendar-days.component.scss
@@ -1,32 +1,28 @@
 @use 'variables' as v;
-
-$size: 2rem;
+@use '../calendar' as c;
 
 :host {
   display: grid;
-  grid-template-columns: repeat(7, minmax(0, $size));
+  grid-template-columns: repeat(7, minmax(0, c.$base-size));
   grid-gap: 0.5rem;
 }
 
-.day,
+.button.fab,
 .day-name {
-  min-height: $size;
-  height: $size;
-  min-width: $size;
-  width: $size;
+  @include c.size();
+}
+
+.button.fab {
+  &.today {
+    @include c.same-date-border();
+  }
+
+  &.selected {
+    @include c.selected-color();
+  }
 }
 
 .day-name {
   display: grid;
   place-items: center;
-}
-
-.day {
-  &.today {
-    border: 1px solid transparentize(v.$primary, 0.3);
-  }
-
-  &.selected {
-    background-color: v.$accent-300;
-  }
 }
