--- a/src/app/shared/components/datepicker/calendar-months/calendar-months.component.scss
+++ b/src/app/shared/components/datepicker/calendar-months/calendar-months.component.scss
@@ -1,21 +1,19 @@
 @use 'variables' as v;
+@use '../calendar' as c;
 
-$width: 8rem;
-$height: 2rem;
+$width: c.$base-size * 4;
 
 .button.fab {
-  min-height: $height;
-  height: $height;
-  min-width: $width;
-  width: $width;
-  border-radius: $height;
   text-transform: capitalize;
+
+  @include c.size($width);
+
   &.same-month {
-    border: 1px solid transparentize(v.$primary, 0.3);
+    @include c.same-date-border();
   }
 
   &.selected {
-    background-color: v.$accent-300;
+    @include c.selected-color();
   }
 }
 
@@ -23,5 +21,5 @@ $height: 2rem;
   display: grid;
   grid-template-columns: repeat(2, minmax(0, $width));
   grid-gap: 0.5rem;
-  padding-top: $height;
+  padding-top: c.$base-size;
 }
