--- a/src/app/shared/components/datepicker/calendar-days/calendar-days.component.scss
+++ b/src/app/shared/components/datepicker/calendar-days/calendar-days.component.scss
@@ -4,7 +4,7 @@
 :host {
   display: grid;
   grid-template-columns: repeat(7, minmax(0, c.$base-size));
-  grid-gap: 0.5rem;
+  grid-gap: c.$grid-gap;
 }
 
 .button.fab,
