--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
-<form [controlGroup]="emailForm" (groupSubmit)="submit()">
-  <bio-card *ngLet="state$ | async as state">
+<form [controlGroup]="emailForm" (groupSubmit)="submit()" class="center-container">
+  <bio-card *ngLet="state$ | async as state" class="center-block-mobile">
     <h3 bioCardTitle>Forgot password</h3>
     <bio-card-content *ngIf="state.emailSent; else email">
       <bio-confirmation-code-input
