--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
-<form [controlGroup]="form" (groupSubmit)="login()">
-  <bio-card>
+<form [controlGroup]="form" (groupSubmit)="login()" class="center-container">
+  <bio-card class="center-block-mobile">
     <h3 bioCardTitle>Login</h3>
     <bio-card-content>
       <form-field>
