--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
-<form [controlGroup]="form" (groupSubmit)="onSubmit()">
-  <bio-card>
+<form [controlGroup]="form" (groupSubmit)="onSubmit()" class="center-container">
+  <bio-card class="center-block-mobile">
     <h3 bioCardTitle>Contact</h3>
     <div bioCardSubtitle>Send us any questions or suggestions you may have</div>
     <div bioCardSubtitle>
