--- a/src/app/stlmpp/stlmpp.component.html
+++ b/src/app/stlmpp/stlmpp.component.html
@@ -1,4 +1,4 @@
-<bio-card *ngLet="fragment$ | async as fragment">
+<bio-card *ngLet="fragment$ | async as fragment" class="center-block-mobile">
   <div
     *ngIf="fragment"
     @fadeInOut
