--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -3,7 +3,6 @@
 @use 'plugins';
 @use 'mixins';
 @use 'typo';
-@use 'grid';
 @use 'form';
 @use 'progressbar';
 @use 'table';
@@ -13,3 +12,4 @@
 @use 'overlay';
 @use 'filter';
 @use 'card-menu';
+@use 'utils';
