--- a/src/app/shared/components/form/form-field.component.html
+++ b/src/app/shared/components/form/form-field.component.html
@@ -20,6 +20,7 @@
     'is-select': !!selectComponent
   }"
 >
+  <!--TODO https://github.com/stLmpp/biomercs-ng/issues/64-->
   <div class="spinner-wrapper">
     <spinner *ngIf="loading" [size]="0.1"></spinner>
   </div>
