- updated dependencies - started implementing the change-password-confirm.component

--- a/src/app/auth/change-password/change-password-confirm/change-password-confirm.component.html
+++ b/src/app/auth/change-password/change-password-confirm/change-password-confirm.component.html
@@ -1,1 +1,70 @@
-<p>change-password-confirm works!</p>
+<form [controlGroup]="form" class="center-block-mobile" *ngIf="state$ | async as state">
+  <bio-card>
+    <h3 bioCardTitle>Change password - confirm</h3>
+    <bio-card-content>
+      <bio-confirmation-code-input
+        controlName="code"
+        (focusoutLastItem)="inputPassword.focus()"
+        label="Confirmation code"
+      ></bio-confirmation-code-input>
+      <form-field label="Old password">
+        <input
+          bioInput
+          placeholder="Password"
+          controlName="oldPassword"
+          [type]="state.hideOldPassword ? 'password' : 'text'"
+          autocomplete="password"
+          #inputPassword
+        />
+        <button suffix bioButton icon type="button" (click)="toggleHideOldPassword()">
+          <icon>{{ state.hideOldPassword ? 'visibility_off' : 'visibility' }}</icon>
+        </button>
+        <errors>
+          <error *error="'required'">Old password is required</error>
+        </errors>
+      </form-field>
+      <form-field label="New password">
+        <input
+          bioInput
+          placeholder="New password"
+          controlName="newPassword"
+          [type]="state.hidePassword ? 'password' : 'text'"
+          autocomplete="new-password"
+          #inputPassword
+        />
+        <button suffix bioButton icon type="button" (click)="toggleHidePassword()">
+          <icon>{{ state.hidePassword ? 'visibility_off' : 'visibility' }}</icon>
+        </button>
+        <errors>
+          <error *error="'required'">New password is required</error>
+          <error *error="'minLength'; let error">New password must have at least {{ error.required }} characters</error>
+        </errors>
+      </form-field>
+      <bio-password-strong dark [password]="password$ | async"></bio-password-strong>
+      <form-field label="Confirm password">
+        <input
+          bioInput
+          placeholder="Confirm new password"
+          controlName="confirmNewPassword"
+          [type]="state.hideConfirmPassword ? 'password' : 'text'"
+          autocomplete="off"
+        />
+        <button suffix bioButton icon type="button" (click)="toggleHideConfirmPassword()">
+          <icon>{{ state.hideConfirmPassword ? 'visibility_off' : 'visibility' }}</icon>
+        </button>
+        <errors>
+          <error *error="'required'">Confirm new password is required</error>
+          <error *error="'minLength'; let error">
+            Confirm new password must have at least {{ error.required }} characters
+          </error>
+          <error *error="'siblingEquals'">New passwords doesn't match</error>
+          <error *error="'siblingNotEquals'">New password is the same as the old password</error>
+        </errors>
+      </form-field>
+      <p *ngIf="error$ | async as error">{{ error }}</p>
+    </bio-card-content>
+    <bio-card-actions>
+      <button type="submit" bioButton primary [disabled]="form.invalid">Confirm</button>
+    </bio-card-actions>
+  </bio-card>
+</form>
