--- a/src/app/auth/shared/password-strong/password-strong.component.scss
+++ b/src/app/auth/shared/password-strong/password-strong.component.scss
@@ -1,14 +1,22 @@
 @use 'variables' as v;
 
 :host {
-  display: block;
+  display: flex;
+  justify-content: flex-end;
   width: 100%;
   height: 5px;
   position: relative;
+  background: linear-gradient(to right, v.$danger 0%, v.$success 60%);
 
-  > .bar {
-    height: 100%;
-    background: linear-gradient(to right, v.$danger-200, v.$accent-200);
-    transition: width 200ms ease;
+  &.dark {
+    .bar {
+      background-color: v.$primary-50;
+    }
   }
+}
+
+.bar {
+  height: 100%;
+  transition: width 200ms ease;
+  background-color: v.$primary-400;
 }
