- implemented method to confirm the password change - added text-danger to the error message

--- a/src/app/auth/change-password/change-password-confirm/change-password-confirm.component.html
+++ b/src/app/auth/change-password/change-password-confirm/change-password-confirm.component.html
@@ -1,4 +1,4 @@
-<form [controlGroup]="form" class="center-block-mobile" *ngIf="state$ | async as state">
+<form [controlGroup]="form" class="center-block-mobile" *ngIf="state$ | async as state" (groupSubmit)="onConfirm()">
   <bio-card>
     <h3 bioCardTitle>Change password - confirm</h3>
     <bio-card-content>
@@ -40,7 +40,7 @@
           <error *error="'minLength'; let error">New password must have at least {{ error.required }} characters</error>
         </errors>
       </form-field>
-      <bio-password-strong dark [password]="password$ | async"></bio-password-strong>
+      <bio-password-strong [password]="password$ | async"></bio-password-strong>
       <form-field label="Confirm password">
         <input
           bioInput
@@ -61,10 +61,10 @@
           <error *error="'siblingNotEquals'">New password is the same as the old password</error>
         </errors>
       </form-field>
-      <p *ngIf="error$ | async as error">{{ error }}</p>
+      <p class="text-danger" *ngIf="error$ | async as error">{{ error }}</p>
     </bio-card-content>
     <bio-card-actions>
-      <button type="submit" bioButton primary [disabled]="form.invalid">Confirm</button>
+      <button type="submit" bioButton primary [disabled]="form.invalid" [loading]="confirming$ | async">Confirm</button>
     </bio-card-actions>
   </bio-card>
 </form>
